Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM+ghTjIan7sWYpTC3swTIi",
+      "authorship_tag": "ABX9TyPvnOr4PICNGd+HxZtL6luQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6646,15 +6646,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tSlW3WM5jCuR"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題\n",
@@ -6678,7 +6669,7 @@
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        " \n",
+        "\n",
         "int main() {\n",
         "  int N, M;\n",
         "  cin >> N >> M;\n",
@@ -6686,39 +6677,215 @@
         "  for (int i = 0; i < M; i++) {\n",
         "    cin >> A.at(i) >> B.at(i);\n",
         "  }\n",
-        " \n",
-        "  // ここにプログラムを追記\n",
-        "  // (ここで\"試合結果の表\"の2次元配列を宣言)\n",
-        "}\n",
-        "​"
+        "\n",
+        "  // N×Nのchar型の2次元配列のすべての要素を'-'で初期化\n",
+        "  vector<vector<char>> table(N, vector<char>(N, '-'));\n",
+        "\n",
+        "  for (int i = 0; i < M; i++) {\n",
+        "    // 1〜N → 0〜N-1 に変換\n",
+        "    A.at(i)--; B.at(i)--;\n",
+        "    table.at(A.at(i)).at(B.at(i)) = 'o';  // AはBに勝った\n",
+        "    table.at(B.at(i)).at(A.at(i)) = 'x';  // BはAに負けた\n",
+        "  }\n",
+        "\n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    for (int j = 0; j < N; j++) {\n",
+        "      cout << table.at(i).at(j);\n",
+        "      if (j == N - 1) {\n",
+        "        cout << endl;  // 行末なら改行\n",
+        "      }\n",
+        "      else {\n",
+        "        cout << \" \";  // 行末でないなら空白を出力\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "}"
       ],
       "metadata": {
-        "id": "7lMZ3ANeGaRv"
+        "id": "7lMZ3ANeGaRv",
+        "outputId": "8b1f08bd-166f-4e98-bcb1-8ec564b54306",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo ​3 2 1 2 3 1 |./temp #=> - o x x - - o - -\n",
+        "!g++ temp.cpp -o temp; echo 3 2 1 2 3 1 |./temp #=> - o x x - - o - -\n",
+        "!echo\n",
         "!g++ temp.cpp -o temp; echo 7 12 1 5 5 4 6 2 1 7 2 4 6 3 1 3 6 4 3 7 5 7 4 3 6 1 |./temp #=> - - o - o x o - - - o - x - x - - x - x o - x o - x x - x - - o - - o o o o o - - - x - x - x - -\n",
+        "!echo\n",
         "!g++ temp.cpp -o temp; echo 1 0|./temp #=> -"
       ],
       "metadata": {
-        "id": "lhhvWupys6ZD"
+        "id": "lhhvWupys6ZD",
+        "outputId": "7dbfbfdc-ee40-4e5d-c30c-cf5b53cd6508",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "- o x\n",
+            "x - -\n",
+            "o - -\n",
+            "\n",
+            "- - o - o x o\n",
+            "- - - o - x -\n",
+            "x - - x - x o\n",
+            "- x o - x x -\n",
+            "x - - o - - o\n",
+            "o o o o - - -\n",
+            "x - x - x - -\n",
+            "\n",
+            "-\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "tSlW3WM5jCuR"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "問題\n",
-        "ABC107 B - Grid Compression"
+        "ABC107 B - Grid Compression\n",
+        "縦 H 行、横 W 列のマス目があります。 上から i 行目、左から j 列目のマスを (i,j) と表します。 各マスは白または黒です。 マス目の配色は、H 行 W 列の行列 (a \n",
+        "i,j\n",
+        "​\n",
+        " ) によって与えられます。 a \n",
+        "i,j\n",
+        "​\n",
+        "  が . ならばマス (i,j) は白であり、a \n",
+        "i,j\n",
+        "​\n",
+        "  が # ならばマス (i,j) は黒です。\n",
+        "\n",
+        "すぬけ君はこのマス目を圧縮しようとしています。 そのために、白いマスのみからなる行または列が存在する間、次の操作を繰り返し行います。\n",
+        "\n",
+        "操作: 白いマスのみからなる行または列をひとつ任意に選び、その行または列を取り除いて空白を詰める。\n",
+        "各操作でどの行または列を選ぶかによらず、最終的なマス目は一意に定まることが示せます。 最終的なマス目を求めてください。\n",
+        "\n",
+        "制約\n",
+        "1≤H,W≤100\n",
+        "a \n",
+        "i,j\n",
+        "​\n",
+        "  は . または # である。\n",
+        "マス目全体で少なくともひとつは黒いマスが存在する。\n",
+        "入力\n",
+        "入力は以下の形式で標準入力から与えられる。\n",
+        "\n",
+        "H W\n",
+        "a \n",
+        "1,1\n",
+        "​\n",
+        " ...a \n",
+        "1,W\n",
+        "​\n",
+        " \n",
+        ":\n",
+        "a \n",
+        "H,1\n",
+        "​\n",
+        " ...a \n",
+        "H,W\n",
+        "​\n",
+        " \n",
+        "出力\n",
+        "最終的なマス目を、入力と同様のフォーマットで出力せよ。 ただし、行数および列数は省くこと。 詳しくはサンプルを参照せよ。\n",
+        "\n",
+        "入力例 1 \n",
+        "Copy\n",
+        "4 4\n",
+        "##.#\n",
+        "....\n",
+        "##.#\n",
+        ".#.#\n",
+        "出力例 1 \n",
+        "Copy\n",
+        "###\n",
+        "###\n",
+        ".##\n",
+        "元のマス目における第 2 行および第 3 列がそれぞれ取り除かれます。\n",
+        "\n",
+        "入力例 2 \n",
+        "Copy\n",
+        "3 3\n",
+        "#..\n",
+        ".#.\n",
+        "..#\n",
+        "出力例 2 \n",
+        "Copy\n",
+        "#..\n",
+        ".#.\n",
+        "..#\n",
+        "白いマスのみからなる行または列が存在しないので、操作は行われません。\n",
+        "\n",
+        "入力例 3 \n",
+        "Copy\n",
+        "4 5\n",
+        ".....\n",
+        ".....\n",
+        "..#..\n",
+        ".....\n",
+        "出力例 3 \n",
+        "Copy\n",
+        "#\n",
+        "入力例 4 \n",
+        "Copy\n",
+        "7 6\n",
+        "......\n",
+        "....#.\n",
+        ".#....\n",
+        "..#...\n",
+        "..#...\n",
+        "......\n",
+        ".#..#.\n",
+        "出力例 4 \n",
+        "Copy\n",
+        "..#\n",
+        "#..\n",
+        ".#.\n",
+        ".#.\n",
+        "#.#"
       ],
       "metadata": {
         "id": "SU-GaBUEHjzv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo  |./temp #=> \n",
+        "!echo\n"
+      ],
+      "metadata": {
+        "id": "qfaobcUdMVbx"
       },
       "execution_count": null,
       "outputs": []
