Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvnOr4PICNGd+HxZtL6luQ",
+      "authorship_tag": "ABX9TyPsHf8bcMauQw66SWp7S9df",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6708,7 +6708,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6735,7 +6735,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6770,125 +6770,115 @@
     {
       "cell_type": "code",
       "source": [
-        "問題\n",
-        "ABC107 B - Grid Compression\n",
-        "縦 H 行、横 W 列のマス目があります。 上から i 行目、左から j 列目のマスを (i,j) と表します。 各マスは白または黒です。 マス目の配色は、H 行 W 列の行列 (a \n",
-        "i,j\n",
-        "​\n",
-        " ) によって与えられます。 a \n",
-        "i,j\n",
-        "​\n",
-        "  が . ならばマス (i,j) は白であり、a \n",
-        "i,j\n",
-        "​\n",
-        "  が # ならばマス (i,j) は黒です。\n",
+        "# 問題\n",
+        "# ABC107 B - Grid Compression\n",
+        "# 縦 H 行、横 W 列のマス目があります。 上から i 行目、左から j 列目のマスを (i,j) と表します。 \n",
+        "# 各マスは白または黒です。 マス目の配色は、H 行 W 列の行列 (a_i,j) によって与えられます。 \n",
+        "# a_i,j が `.` ならばマス (i,j) は白であり、a_i,j が `#` ならばマス (i,j) は黒です。\n",
+        "# すぬけ君はこのマス目を圧縮しようとしています。 そのために、\n",
+        "# 白いマスのみからなる行または列が存在する間、次の操作を繰り返し行います。\n",
+        "# 操作: 白いマスのみからなる行または列をひとつ任意に選び、その行または列を取り除いて空白を詰める。\n",
+        "# 各操作でどの行または列を選ぶかによらず、最終的なマス目は一意に定まることが示せます。 \n",
+        "# 最終的なマス目を求めてください。\n",
+        "# マス目全体で少なくともひとつは黒いマスが存在する。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  int h;\n",
+        "  cin >> h;\n",
+        "  int w;\n",
+        "  cin >> w;\n",
+        "  vector<string> a(h);\n",
+        "  for (int i = 0; i < h; i++) {\n",
+        "    cin >> a[i];\n",
+        "  }\n",
         "\n",
-        "すぬけ君はこのマス目を圧縮しようとしています。 そのために、白いマスのみからなる行または列が存在する間、次の操作を繰り返し行います。\n",
+        "  vector<bool> row(h, false);\n",
+        "  vector<bool> col(w, false);\n",
+        "  for (int i = 0; i < h; i++) {\n",
+        "    for (int j = 0; j < w; j++) {\n",
+        "      if (a[i][j] == '#') {\n",
+        "        row[i] = true;\n",
+        "        col[j] = true;\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
         "\n",
-        "操作: 白いマスのみからなる行または列をひとつ任意に選び、その行または列を取り除いて空白を詰める。\n",
-        "各操作でどの行または列を選ぶかによらず、最終的なマス目は一意に定まることが示せます。 最終的なマス目を求めてください。\n",
-        "\n",
-        "制約\n",
-        "1≤H,W≤100\n",
-        "a \n",
-        "i,j\n",
-        "​\n",
-        "  は . または # である。\n",
-        "マス目全体で少なくともひとつは黒いマスが存在する。\n",
-        "入力\n",
-        "入力は以下の形式で標準入力から与えられる。\n",
-        "\n",
-        "H W\n",
-        "a \n",
-        "1,1\n",
-        "​\n",
-        " ...a \n",
-        "1,W\n",
-        "​\n",
-        " \n",
-        ":\n",
-        "a \n",
-        "H,1\n",
-        "​\n",
-        " ...a \n",
-        "H,W\n",
-        "​\n",
-        " \n",
-        "出力\n",
-        "最終的なマス目を、入力と同様のフォーマットで出力せよ。 ただし、行数および列数は省くこと。 詳しくはサンプルを参照せよ。\n",
-        "\n",
-        "入力例 1 \n",
-        "Copy\n",
-        "4 4\n",
-        "##.#\n",
-        "....\n",
-        "##.#\n",
-        ".#.#\n",
-        "出力例 1 \n",
-        "Copy\n",
-        "###\n",
-        "###\n",
-        ".##\n",
-        "元のマス目における第 2 行および第 3 列がそれぞれ取り除かれます。\n",
-        "\n",
-        "入力例 2 \n",
-        "Copy\n",
-        "3 3\n",
-        "#..\n",
-        ".#.\n",
-        "..#\n",
-        "出力例 2 \n",
-        "Copy\n",
-        "#..\n",
-        ".#.\n",
-        "..#\n",
-        "白いマスのみからなる行または列が存在しないので、操作は行われません。\n",
-        "\n",
-        "入力例 3 \n",
-        "Copy\n",
-        "4 5\n",
-        ".....\n",
-        ".....\n",
-        "..#..\n",
-        ".....\n",
-        "出力例 3 \n",
-        "Copy\n",
-        "#\n",
-        "入力例 4 \n",
-        "Copy\n",
-        "7 6\n",
-        "......\n",
-        "....#.\n",
-        ".#....\n",
-        "..#...\n",
-        "..#...\n",
-        "......\n",
-        ".#..#.\n",
-        "出力例 4 \n",
-        "Copy\n",
-        "..#\n",
-        "#..\n",
-        ".#.\n",
-        ".#.\n",
-        "#.#"
+        "  for (int i = 0; i < h; i++) {\n",
+        "    if (row[i]) {\n",
+        "      for (int j = 0; j < w; j++) {\n",
+        "        if (col[j]) {\n",
+        "          cout << a[i][j];\n",
+        "        }\n",
+        "      }\n",
+        "      cout << endl;\n",
+        "    }\n",
+        "  }\n",
+        "}\n"
       ],
       "metadata": {
-        "id": "SU-GaBUEHjzv"
+        "id": "SU-GaBUEHjzv",
+        "outputId": "b8915096-a3b9-42ca-e7c4-1f22bce7c762",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo  |./temp #=> \n",
-        "!echo\n"
+        "!g++ temp.cpp -o temp; echo \"4 4 ##.# .... ##.# .#.#\" |./temp #=> ### ### .##\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"3 3 #.. .#. ..#\" |./temp #=> #.. .#. ..#\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"4 5 ..... ..... ..#.. .....\" |./temp #=> #\n",
+        "!echo\n",
+        "!g++ temp.cpp -o temp; echo \"7 6 ...... ....#. .#.... ..#... ..#... ...... .#..#.\" |./temp #=> ..# #.. .#. .#. #.#\n",
+        "!echo"
       ],
       "metadata": {
-        "id": "qfaobcUdMVbx"
+        "id": "qfaobcUdMVbx",
+        "outputId": "1b4fb172-6e33-4ab0-a73b-0de5efdf7409",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "###\n",
+            "###\n",
+            ".##\n",
+            "\n",
+            "#..\n",
+            ".#.\n",
+            "..#\n",
+            "\n",
+            "#\n",
+            "\n",
+            "..#\n",
+            "#..\n",
+            ".#.\n",
+            ".#.\n",
+            "#.#\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
