--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5Cf64BA73jPB8zC0L6zD6",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPGTy4q0vIujlfaFevzwm9n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6999,11 +7000,11 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "WiZJQAO7RroX",
-        "outputId": "0b405b48-8a84-491b-f817-3782735bc90b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WiZJQAO7RroX",
+        "outputId": "0b405b48-8a84-491b-f817-3782735bc90b"
       },
       "execution_count": 7,
       "outputs": [
@@ -7041,11 +7042,11 @@
         "}"
       ],
       "metadata": {
-        "id": "SJUco963Rpra",
-        "outputId": "a60c44c8-23f6-4838-fbc8-348f99aa072f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SJUco963Rpra",
+        "outputId": "a60c44c8-23f6-4838-fbc8-348f99aa072f"
       },
       "execution_count": 8,
       "outputs": [
@@ -7064,11 +7065,11 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "aX1H67xvSZHX",
-        "outputId": "0730c3ba-7a2a-4ec7-a0d0-bdf8f3159eb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aX1H67xvSZHX",
+        "outputId": "0730c3ba-7a2a-4ec7-a0d0-bdf8f3159eb8"
       },
       "execution_count": 9,
       "outputs": [
@@ -7085,87 +7086,8 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "// a,b,cの最大値、最小値をそれぞれminimumの参照先、maximumの参照先に代入する\n",
-        "void min_and_max(int a, int b, int c, int &minimum, int &maximum) {\n",
-        "  minimum = min(a, min(b, c));  // 最小値をminimumの参照先に代入\n",
-        "  maximum = max(a, max(b, c));  // 最大値をmaximumの参照先に代入\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "  int minimum, maximum;\n",
-        "  min_and_max(3, 1, 5, minimum, maximum);  // minimum, maximumを参照渡し\n",
-        "  cout << \"minimum: \" <<  minimum << endl;  // 最小値\n",
-        "  cout << \"maximum: \" <<  maximum << endl;  // 最大値\n",
-        "}\n",
-        "実行結果\n",
-        "minimum: 1\n",
-        "maximum: 5\n",
-        "無駄なコピーを減らす\n",
-        "関数に引数を渡す場合、無駄なコピーが発生することがあります。\n",
-        "\n",
-        "Copy\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
-        "// 配列の先頭100要素の値の合計を計算する\n",
-        "int sum100(vector<int> a) {\n",
-        "  int result = 0;\n",
-        "  for (int i = 0; i < 100; i++) {\n",
-        "    result += a.at(i);\n",
-        "  }\n",
-        "  return result;\n",
-        "}\n",
-        " \n",
-        "int main() {\n",
-        "  vector<int> vec(10000000, 1);  // すべての要素が1の配列\n",
-        " \n",
-        "  // sum100 を500回呼び出す\n",
-        "  for (int i = 0; i < 500; i++) {\n",
-        "    cout << sum100(vec) << endl;  // 配列のコピーが生じる\n",
-        "  }\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "// 配列の先頭100要素の値の合計を計算する\n",
-        "int sum100(vector<int> a) {\n",
-        "  int result = 0;\n",
-        "  for (int i = 0; i < 100; i++) {\n",
-        "    result += a.at(i);\n",
-        "  }\n",
-        "  return result;\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "  vector<int> vec(10000000, 1);  // すべての要素が1の配列\n",
-        "\n",
-        "  // sum100 を500回呼び出す\n",
-        "  for (int i = 0; i < 500; i++) {\n",
-        "    cout << sum100(vec) << endl;  // 配列のコピーが生じる\n",
-        "  }\n",
-        "}\n",
-        "実行結果\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "(省略)\n",
-        "...\n",
-        "実行時間\n",
-        "7813 ms\n",
-        "※一例なので異なる結果になることがあります。\n",
-        "\n",
-        "上のプログラムでは関数sum100を呼び出すたびに配列の要素がコピーされるので、1000万要素の配列のコピーが500回生じています。\n",
-        "この実行結果では全体で7秒以上の時間がかかっていて、配列を1回コピーするのに約15ミリ秒(0.015秒)程かかっていることになります。\n",
-        "\n",
-        "ここで、引数のvector<int> aをvector<int> &aとして参照渡しするように変更します。\n",
-        "\n",
-        "Copy\n",
+        "# 無駄なコピーを減らす\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -7185,156 +7107,100 @@
         "  for (int i = 0; i < 500; i++) {\n",
         "    cout << sum100(vec) << endl;  // 参照渡しなので配列のコピーは生じない\n",
         "  }\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eO2tXe4ySXjH",
+        "outputId": "7253fff7-2e62-4ef6-b9b0-b610913fd6cc"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !g++ temp.cpp -o temp; ./temp #=> アウトプットが大きいのでコメントアウト"
+      ],
+      "metadata": {
+        "id": "Psu2r5Quxfrn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 範囲for文での参照\n",
+        "# 参照は範囲for文でも用いることができ、これによって配列の要素を書き換える処理を簡潔に書くことができます。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "\n",
-        "// 配列の先頭100要素の値の合計を計算する (参照渡し)\n",
-        "int sum100(vector<int> &a) {\n",
-        "  int result = 0;\n",
-        "  for (int i = 0; i < 100; i++) {\n",
-        "    result += a.at(i);\n",
+        "int main() {\n",
+        "  vector<int> a = { 1, 3, 2, 5 };\n",
+        "  for (int& x : a) {\n",
+        "    x = x * 2;\n",
         "  }\n",
-        "  return result;\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "  vector<int> vec(10000000, 1);  // すべての要素が1の配列\n",
-        "\n",
-        "  // sum100 を500回呼び出す\n",
-        "  for (int i = 0; i < 500; i++) {\n",
-        "    cout << sum100(vec) << endl;  // 参照渡しなので配列のコピーは生じない\n",
-        "  }\n",
-        "}\n",
-        "実行結果\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "100\n",
-        "(省略)\n",
-        "...\n",
-        "実行時間\n",
-        "15 ms\n",
-        "※一例なので異なる結果になることがあります。\n",
-        "\n",
-        "こちらのプログラムでは、配列を参照渡ししているので呼び出し時に配列の要素がコピーされず、 実行時間が約15ミリ秒に収まっています。\n",
-        "値渡しを用いたsum100では1回あたりの呼び出しに約15ミリ秒かかっていたことを踏まえれば、 約500倍程高速に動作するようになったことになります。\n",
-        "\n",
-        "これらのサンプルプログラムはあまりない意味の無い極端な例ですが、現実的なプログラムでも、 複数回呼び出される関数で配列の値渡しを行うと上の例のように実行時間が遅くなってしまうことがあります。\n",
-        "詳しくは2.06.計算量で扱いますが、プログラムを高速化したい場合には配列のコピーについて特に気をつける必要があります。 コピーが必要のない場合は参照渡しを用いるのが良いでしょう。\n",
-        "\n",
-        "注意点\n",
-        "参照先の指定が必要\n",
-        "参照を宣言するときは基本的に参照先を指定して初期化する必要があります。\n",
-        "参照先が定まっていない参照を作ることはできないということに注意しましょう。\n",
-        "\n",
-        "関数の引数に用いる参照は呼び出し時に自動的に参照先が決まります。\n",
-        "\n",
-        "Copy\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        " \n",
-        "int main() {\n",
-        "  int a = 0;\n",
-        "  int &b;  // コンパイルエラー\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int a = 0;\n",
-        "  int &b;  // コンパイルエラー\n",
-        "}\n",
-        "エラー出力\n",
-        "./Main.cpp: In function ‘int main()’:\n",
-        "./Main.cpp:6:8: error: ‘b’ declared as reference but not initialized\n",
-        "   int &b;\n",
-        "        ^\n",
-        "「bが参照として宣言されているのに初期化されていない」というエラーです。\n",
-        "\n",
-        "参照先を変更することはできない\n",
-        "一度宣言した参照の参照先を後から変更することもできません。\n",
-        "\n",
-        "細かい話\n",
-        "&の位置\n",
-        "参照の宣言を以下のように紹介しました。\n",
-        "\n",
-        "Copy\n",
-        "参照先の型 &参照の名前 = 参照先;参照先の型 &参照の名前 = 参照先;\n",
-        "実は、&の位置は参照の名前の直前である必要はなく、次のようにすることもできます。\n",
-        "\n",
-        "Copy\n",
-        "参照先の型& 参照の名前 = 参照先;  // 型の直後\n",
-        "参照先の型 & 参照の名前 = 参照先;  // 中間参照先の型& 参照の名前 = 参照先;  // 型の直後\n",
-        "参照先の型 & 参照の名前 = 参照先;  // 中間\n",
-        "しかし、複数の参照を同時に宣言しようとした場合には注意が必要です。\n",
-        "\n",
-        "Copy\n",
-        "int a = 123;\n",
-        "int& b = a, c = a;int a = 123;\n",
-        "int& b = a, c = a;\n",
-        "例えば、上のようにした場合に、bとcはどちらもaへの参照になるように見えてしまいますが、 実際にはcは参照ではなく、「aの値で初期化されたint型の変数」になります。(bはaの参照になります。)\n",
-        "\n",
-        "cを参照にするには、cの前にも&をつける必要があります。\n",
-        "\n",
-        "&の位置は参照の名前の直前でも型名の直後でもいいのですが、このような問題があるため、名前の直前に書くのが良いでしょう。\n",
-        "\n",
-        "Copy\n",
-        "int a = 123;\n",
-        "int &b = a, &c = a;  // bとcはどちらもaへの参照int a = 123;\n",
-        "int &b = a, &c = a;  // bとcはどちらもaへの参照\n",
-        "範囲for文での参照\n",
-        "2.02 ループの書き方では、範囲for文を用いて配列の要素の値を読み取る場合についてのみ紹介しました。\n",
-        "\n",
-        "Copy\n",
-        "vector<int> a = {1, 3, 2, 5};\n",
-        "for (int x : a) {\n",
-        "  x = x * 2;\n",
-        "}\n",
-        "// aは{1, 3, 2, 5}のままvector<int> a = {1, 3, 2, 5};\n",
-        "for (int x : a) {\n",
-        "  x = x * 2;\n",
-        "}\n",
-        "// aは{1, 3, 2, 5}のまま\n",
-        "例えば上のように書いても、x自体は2倍になるものの、対応する配列の要素は変更されません。\n",
-        "\n",
-        "参照は範囲for文でも用いることができ、これによって配列の要素を書き換える処理を簡潔に書くことができます。\n",
-        "\n",
-        "Copy\n",
-        "vector<int> a = {1, 3, 2, 5};\n",
-        "for (int &x : a) {\n",
-        "  x = x * 2;\n",
-        "}\n",
-        "// aは{2, 6, 4, 10}となるvector<int> a = {1, 3, 2, 5};\n",
-        "for (int &x : a) {\n",
-        "  x = x * 2;\n",
-        "}\n",
-        "// aは{2, 6, 4, 10}となる\n",
-        "参照を用いた範囲for文の書き方\n",
-        "Copy\n",
-        "for (配列の要素の型 &変数名 : 配列変数) {\n",
-        "  // 変数名 を使う(変数を経由して配列の要素を書き換え可能)\n",
-        "}for (配列の要素の型 &変数名 : 配列変数) {\n",
-        "  // 変数名 を使う(変数を経由して配列の要素を書き換え可能)\n",
-        "}\n",
-        "変数以外の参照\n",
-        "参照先を変数以外にすることもできます。\n",
-        "\n",
-        "Copy\n",
-        "vector<int> v = {1, 2, 3};\n",
-        "\n",
-        "// 以下の操作で参照先のvの要素が書き換わる\n",
-        "int &e = v.at(1);\n",
-        "e = -2;\n",
-        "\n",
-        "cout << v.at(0) << \", \" << v.at(1) << \", \" << v.at(2) << endl;  // \"1, -2, 3\"が出力されるvector<int> v = {1, 2, 3};\n",
-        "\n",
-        "// 以下の操作で参照先のvの要素が書き換わる\n",
-        "int &e = v.at(1);\n",
-        "e = -2;\n",
-        "\n",
-        "cout << v.at(0) << \", \" << v.at(1) << \", \" << v.at(2) << endl;  // \"1, -2, 3\"が出力される\n",
+        "  for (int i = 0; i < a.size(); i++) {\n",
+        "      if (i != a.size()-1) cout << a.at(i) << \" \";\n",
+        "      else cout << a.at(i) << endl;\n",
+        "  } \n",
+        "}"
+      ],
+      "metadata": {
+        "id": "dh6f9zI6xM1u",
+        "outputId": "b9a34487-96fd-4e5a-d802-00ec00b01196",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp #=> 2 6 4 10"
+      ],
+      "metadata": {
+        "id": "A1qMi0CW4unv",
+        "outputId": "2175a583-4570-4df2-a8a8-6130a8cc74bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 6 4 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "この例では、配列の2番目の要素を参照先とする参照を宣言しています。\n",
         "ただし、この例のようにvectorの要素に対する参照を作る場合には注意が必要です。\n",
         "\n",
@@ -7430,7 +7296,7 @@
         " ページトップ"
       ],
       "metadata": {
-        "id": "eO2tXe4ySXjH"
+        "id": "gvAxXAGR4doS"
       },
       "execution_count": null,
       "outputs": []
