--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNitO/dPtdVLnm3Gf4wG48H",
+      "authorship_tag": "ABX9TyOdl7NnJ/RyLtPeAU29cBpZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7216,7 +7216,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7239,7 +7239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7279,7 +7279,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7313,50 +7313,30 @@
     {
       "cell_type": "code",
       "source": [
-        "EX19.九九の採点\n",
-        "\n",
-        "C++入門 AtCoder Programming Guide for beginners (APG4b)\n",
-        " 日本語 \n",
-        " katsu95i (Contestant) \n",
-        "コンテスト時間: 2017-12-13(水) 21:00 ~ 4017-12-13(水) 21:00AtCoderホームへ戻る\n",
-        " トップ\n",
-        " 問題\n",
-        " 提出結果\n",
-        " 順位表\n",
-        " コードテスト\n",
-        " 解説\n",
-        "EX19 - 九九の採点 \n",
-        "実行時間制限: 2 sec / メモリ制限: 256 MB\n",
-        "\n",
-        "説明ページに戻る\n",
-        "\n",
-        "問題文\n",
-        "小学校の先生であるあなたはA君に九九の表を埋める宿題を出しました。 次の日、A君は宿題をやってきましたが、いくつかのマスは間違っているようです。\n",
-        "\n",
-        "A君の宿題を採点するプログラムを作成してください。\n",
-        "\n",
-        "具体的には、以下の要件を満たすプログラムを作成してください。\n",
-        "\n",
-        "A君の回答の表(9×9の二次元配列)を入力として受け取る\n",
-        "誤った値が書き込まれたマスを正しい値に書き直す\n",
-        "正しい値が書き込まれたマスの個数を数える\n",
-        "誤った値が書き込まれたマスの個数を数える\n",
-        "※参照渡しの練習問題なので、「プログラムの雛形」を書き換える形でプログラムを作成してください。\n",
-        "\n",
-        "プログラムの雛形\n",
-        "以下のプログラム中のコメントに従って書き換えるようにしてください。\n",
-        "\n",
-        "Copy\n",
+        "# 問題\n",
+        "# EX19 - 九九の採点 \n",
+        "# 小学校の先生であるあなたはA君に九九の表を埋める宿題を出しました。 \n",
+        "# 次の日、A君は宿題をやってきましたが、いくつかのマスは間違っているようです。\n",
+        "# A君の宿題を採点するプログラムを作成してください。\n",
+        "# A君の回答の表(9×9の二次元配列)を入力として受け取る\n",
+        "# 誤った値が書き込まれたマスを正しい値に書き直す\n",
+        "# 正しい値が書き込まれたマスの個数を数える\n",
+        "# 誤った値が書き込まれたマスの個数を数える\n",
+        "# ※参照渡しの練習問題なので、「プログラムの雛形」を書き換える形でプログラムを作成してください。\n",
+        "# プログラムの雛形\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
         "// 参照渡しを用いて、呼び出し側の変数の値を変更する\n",
-        "void saiten(/* 呼び出し側に対応するように引数を書く */) {\n",
+        "// void saiten(/* 呼び出し側に対応するように引数を書く */) {\n",
+        "void saiten(vector<vector<int>> &A, int &corect_count, int &wrong_count) {\n",
         "  // 呼び出し側のAの各マスを正しい値に修正する\n",
         "  // Aのうち、正しい値の書かれたマスの個数を correct_count に入れる\n",
         "  // Aのうち、誤った値の書かれたマスの個数を wrong_count に入れる\n",
         " \n",
         "  // ここにプログラムを追記\n",
+        "\n",
         "}\n",
         " \n",
         " \n",
@@ -7390,655 +7370,19 @@
         "  cout << correct_count << endl;\n",
         "  // 誤っているマスの個数を出力\n",
         "  cout << wrong_count << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "_Fz9k0JvN_gP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
-        "// 参照渡しを用いて、呼び出し側の変数の値を変更する\n",
-        "void saiten(/* 呼び出し側に対応するように引数を書く */) {\n",
-        "  // 呼び出し側のAの各マスを正しい値に修正する\n",
-        "  // Aのうち、正しい値の書かれたマスの個数を correct_count に入れる\n",
-        "  // Aのうち、誤った値の書かれたマスの個数を wrong_count に入れる\n",
         "\n",
-        "  // ここにプログラムを追記\n",
-        "}\n",
-        "\n",
-        "\n",
-        "// -------------------\n",
-        "// ここから先は変更しない\n",
-        "// -------------------\n",
-        "int main() {\n",
-        "  // A君の回答を受け取る\n",
-        "  vector<vector<int>> A(9, vector<int>(9));\n",
-        "  for (int i = 0; i < 9; i++) {\n",
-        "    for (int j = 0; j < 9; j++) {\n",
-        "      cin >> A.at(i).at(j);\n",
-        "    }\n",
-        "  }\n",
-        "\n",
-        "  int correct_count = 0; // ここに正しい値のマスの個数を入れる\n",
-        "  int wrong_count = 0;   // ここに誤った値のマスの個数を入れる\n",
-        "\n",
-        "  // A, correct_count, wrong_countを参照渡し\n",
-        "  saiten(A, correct_count, wrong_count);\n",
-        "\n",
-        "  // 正しく修正した表を出力\n",
-        "  for (int i = 0; i < 9; i++) {\n",
-        "    for (int j = 0; j < 9; j++) {\n",
-        "      cout << A.at(i).at(j);\n",
-        "      if (j < 8) cout << \" \";\n",
-        "      else cout << endl;\n",
-        "    }\n",
-        "  }\n",
-        "  // 正しいマスの個数を出力\n",
-        "  cout << correct_count << endl;\n",
-        "  // 誤っているマスの個数を出力\n",
-        "  cout << wrong_count << endl;\n",
-        "}\n",
-        "制約\n",
-        "0≤A \n",
-        "i,j\n",
-        "​\n",
-        " ≤100\n",
-        "入力\n",
-        "入力は次の形式で標準入力から与えられます。\n",
-        "\n",
-        "A \n",
-        "1,1\n",
-        "​\n",
-        "  A \n",
-        "1,2\n",
-        "​\n",
-        "  A \n",
-        "1,3\n",
-        "​\n",
-        "  A \n",
-        "1,4\n",
-        "​\n",
-        "  A \n",
-        "1,5\n",
-        "​\n",
-        "  A \n",
-        "1,6\n",
-        "​\n",
-        "  A \n",
-        "1,7\n",
-        "​\n",
-        "  A \n",
-        "1,8\n",
-        "​\n",
-        "  A \n",
-        "1,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "2,1\n",
-        "​\n",
-        "  A \n",
-        "2,2\n",
-        "​\n",
-        "  A \n",
-        "2,3\n",
-        "​\n",
-        "  A \n",
-        "2,4\n",
-        "​\n",
-        "  A \n",
-        "2,5\n",
-        "​\n",
-        "  A \n",
-        "2,6\n",
-        "​\n",
-        "  A \n",
-        "2,7\n",
-        "​\n",
-        "  A \n",
-        "2,8\n",
-        "​\n",
-        "  A \n",
-        "2,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "3,1\n",
-        "​\n",
-        "  A \n",
-        "3,2\n",
-        "​\n",
-        "  A \n",
-        "3,3\n",
-        "​\n",
-        "  A \n",
-        "3,4\n",
-        "​\n",
-        "  A \n",
-        "3,5\n",
-        "​\n",
-        "  A \n",
-        "3,6\n",
-        "​\n",
-        "  A \n",
-        "3,7\n",
-        "​\n",
-        "  A \n",
-        "3,8\n",
-        "​\n",
-        "  A \n",
-        "3,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "4,1\n",
-        "​\n",
-        "  A \n",
-        "4,2\n",
-        "​\n",
-        "  A \n",
-        "4,3\n",
-        "​\n",
-        "  A \n",
-        "4,4\n",
-        "​\n",
-        "  A \n",
-        "4,5\n",
-        "​\n",
-        "  A \n",
-        "4,6\n",
-        "​\n",
-        "  A \n",
-        "4,7\n",
-        "​\n",
-        "  A \n",
-        "4,8\n",
-        "​\n",
-        "  A \n",
-        "4,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "5,1\n",
-        "​\n",
-        "  A \n",
-        "5,2\n",
-        "​\n",
-        "  A \n",
-        "5,3\n",
-        "​\n",
-        "  A \n",
-        "5,4\n",
-        "​\n",
-        "  A \n",
-        "5,5\n",
-        "​\n",
-        "  A \n",
-        "5,6\n",
-        "​\n",
-        "  A \n",
-        "5,7\n",
-        "​\n",
-        "  A \n",
-        "5,8\n",
-        "​\n",
-        "  A \n",
-        "5,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "6,1\n",
-        "​\n",
-        "  A \n",
-        "6,2\n",
-        "​\n",
-        "  A \n",
-        "6,3\n",
-        "​\n",
-        "  A \n",
-        "6,4\n",
-        "​\n",
-        "  A \n",
-        "6,5\n",
-        "​\n",
-        "  A \n",
-        "6,6\n",
-        "​\n",
-        "  A \n",
-        "6,7\n",
-        "​\n",
-        "  A \n",
-        "6,8\n",
-        "​\n",
-        "  A \n",
-        "6,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "7,1\n",
-        "​\n",
-        "  A \n",
-        "7,2\n",
-        "​\n",
-        "  A \n",
-        "7,3\n",
-        "​\n",
-        "  A \n",
-        "7,4\n",
-        "​\n",
-        "  A \n",
-        "7,5\n",
-        "​\n",
-        "  A \n",
-        "7,6\n",
-        "​\n",
-        "  A \n",
-        "7,7\n",
-        "​\n",
-        "  A \n",
-        "7,8\n",
-        "​\n",
-        "  A \n",
-        "7,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "8,1\n",
-        "​\n",
-        "  A \n",
-        "8,2\n",
-        "​\n",
-        "  A \n",
-        "8,3\n",
-        "​\n",
-        "  A \n",
-        "8,4\n",
-        "​\n",
-        "  A \n",
-        "8,5\n",
-        "​\n",
-        "  A \n",
-        "8,6\n",
-        "​\n",
-        "  A \n",
-        "8,7\n",
-        "​\n",
-        "  A \n",
-        "8,8\n",
-        "​\n",
-        "  A \n",
-        "8,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "9,1\n",
-        "​\n",
-        "  A \n",
-        "9,2\n",
-        "​\n",
-        "  A \n",
-        "9,3\n",
-        "​\n",
-        "  A \n",
-        "9,4\n",
-        "​\n",
-        "  A \n",
-        "9,5\n",
-        "​\n",
-        "  A \n",
-        "9,6\n",
-        "​\n",
-        "  A \n",
-        "9,7\n",
-        "​\n",
-        "  A \n",
-        "9,8\n",
-        "​\n",
-        "  A \n",
-        "9,9\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "i,j\n",
-        "​\n",
-        " はi×jの答えとしてA君が書き込んだ値です。\n",
-        "\n",
-        "出力 \n",
-        "Copy\n",
-        "A \n",
-        "1,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "1,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "2,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "2,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "3,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "3,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "4,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "4,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "5,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "5,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "6,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "6,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "7,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "7,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "8,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "8,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "A \n",
-        "9,1\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,2\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,3\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,4\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,5\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,6\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,7\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,8\n",
-        "′\n",
-        "​\n",
-        "  A \n",
-        "9,9\n",
-        "′\n",
-        "​\n",
-        " \n",
-        "correct_count\n",
-        "wrong_count\n",
-        "A \n",
-        "′\n",
         " は入力のAの各マスを正しい値に修正したものです。\n",
         "correct_countは正しい値が書き込まれていたマスの個数、wrong_countは誤った値が書き込まれていたマスの個数です。\n",
         "\n",
@@ -8131,7 +7475,7 @@
         "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
       ],
       "metadata": {
-        "id": "_Fz9k0JvN_gP"
+        "id": "Nd-Fn1Pe1zXb"
       },
       "execution_count": null,
       "outputs": []
