--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNJCeIuXOe3RkkG8OBzgues",
+      "authorship_tag": "ABX9TyNjMw5zS330oE4ZUJCH30T0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7526,10 +7526,10 @@
       ],
       "metadata": {
         "id": "KjfuMn43UXVB",
-        "outputId": "5686e8de-e14a-495b-ed8b-7efec78d941f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5686e8de-e14a-495b-ed8b-7efec78d941f"
       },
       "execution_count": 2,
       "outputs": [
@@ -7548,11 +7548,11 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "0sZzxlwCXpYQ",
-        "outputId": "e9892ae4-001a-4e44-a67f-0d03cad6baa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0sZzxlwCXpYQ",
+        "outputId": "e9892ae4-001a-4e44-a67f-0d03cad6baa7"
       },
       "execution_count": 3,
       "outputs": [
@@ -7607,11 +7607,11 @@
         "}"
       ],
       "metadata": {
-        "id": "EEwVnXdHXiNe",
-        "outputId": "5368a466-6beb-467a-f350-47343b6d20bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EEwVnXdHXiNe",
+        "outputId": "5368a466-6beb-467a-f350-47343b6d20bf"
       },
       "execution_count": 4,
       "outputs": [
@@ -7630,11 +7630,11 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "G6ddllKhYPEp",
-        "outputId": "a9686419-4fc5-43db-c95c-2db91bed477a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G6ddllKhYPEp",
+        "outputId": "a9686419-4fc5-43db-c95c-2db91bed477a"
       },
       "execution_count": 5,
       "outputs": [
@@ -7652,13 +7652,68 @@
       "source": [
         "# 再帰関数の実装例\n",
         "# Nが素数であるかを判定する関数 is_prime\n",
-        "クリックで開く\n"
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "// i ~ N-1の範囲にNの約数が存在するか\n",
+        "bool has_divisor(int N, int i) {\n",
+        "  // ベースケース1\n",
+        "  if (i == N) {\n",
+        "    return false;\n",
+        "  }\n",
+        "  // ベースケース2\n",
+        "  if (N % i == 0) {\n",
+        "    // 実際にiはNの約数なので、i ~ N-1の範囲に約数が存在する\n",
+        "    return true;\n",
+        "  }\n",
+        "\n",
+        "  // 再帰ステップ\n",
+        "  // i+1 ~ N-1の範囲の結果がi ~ N-1の範囲の結果となる\n",
+        "  // (ベースケース2によって、iがNの約数の場合は取り除かれているので、あとはi+1 ~ N-1の範囲を調べればよい)\n",
+        "  return has_divisor(N, i + 1);\n",
+        "}\n",
+        "\n",
+        "bool is_prime(int N) {\n",
+        "  if (N == 1) {\n",
+        "    // 1は素数ではない\n",
+        "    return false;\n",
+        "  }\n",
+        "  else if (N == 2) {\n",
+        "    // 2は素数\n",
+        "    return true;\n",
+        "  }\n",
+        "  else {\n",
+        "    // 2~(N-1)の範囲に約数が無ければ、Nは素数\n",
+        "    return !has_divisor(N, 2);\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  cout << is_prime(1) << endl;  // 0\n",
+        "  cout << is_prime(2) << endl;  // 1\n",
+        "  cout << is_prime(12) << endl; // 0\n",
+        "  cout << is_prime(13) << endl; // 1\n",
+        "  cout << is_prime(57) << endl; // 0\n",
+        "}"
       ],
       "metadata": {
-        "id": "UzVrE343YI7m"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UzVrE343YI7m",
+        "outputId": "f2a94f7f-1cca-4459-a942-bbaf3539baec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -7666,26 +7721,115 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "RywaTwvrY8YU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RywaTwvrY8YU",
+        "outputId": "cff6e297-719e-4c88-c0b1-dff736fe260d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "0\n",
+            "1\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "# 再帰関数の実装例\n",
-        "配列の操作 reverse_array\n",
+        "# 配列の操作 reverse_array\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
         "\n",
+        "// dataのi番目以降の要素を逆順にした配列を返す\n",
+        "vector<int> reverse_array_from_i(vector<int> &data, int i) {\n",
+        "  // ベースケース\n",
+        "  if (i == data.size()) {\n",
+        "    vector<int> empty_array(0);  // 要素数0の配列\n",
+        "    return empty_array;\n",
+        "  }\n",
+        "\n",
+        "  // 再帰ステップ\n",
+        "  vector<int> tmp = reverse_array_from_i(data, i + 1);  // dataのi+1番目以降の要素を逆順にした配列を得る\n",
+        "  tmp.push_back(data.at(i));  // 末尾にdataのi番目の要素を追加\n",
+        "  return tmp;\n",
+        "}\n",
+        "\n",
+        "// 配列を逆順にしたものを返す\n",
+        "vector<int> reverse_array(vector<int> &data) {\n",
+        "  return reverse_array_from_i(data, 0);\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  vector<int> a = {1, 2, 3, 4, 5};\n",
+        "  vector<int> b = reverse_array(a);\n",
+        "  for (int i = 0; i < b.size(); i++) {\n",
+        "    cout << b.at(i) << endl;\n",
+        "  }\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jo8sitvhY6r9",
+        "outputId": "d49407eb-3322-4082-bc0e-5c505e73222a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp "
+      ],
+      "metadata": {
+        "id": "EkRYz3I9BRFX",
+        "outputId": "b54fd177-c8b1-41c1-d620-b8bda10c27de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 再帰関数の例題\n",
         "# 報告書の伝達時間\n",
-        "次の問題はこれまで紹介した例と違い、再帰関数で実装しないと煩雑になるような例です。\n",
-        "\n",
-        "難易度が高めなので、少し考えて分からなかったらヒントや解答例を見るようにしてください。\n",
-        "\n",
-        "問題文\n",
-        "あなたはA社を経営する社長です。 A社はN個の組織からなり、それぞれに0番からN−1番の番号が付いています。 0番の番号が付いた組織はトップの組織です。\n",
+        "# あなたはA社を経営する社長です。 A社はN個の組織からなり、\n",
+        "それぞれに0番からN−1番の番号が付いています。 0番の番号が付いた組織はトップの組織です。\n",
         "\n",
         "組織間には親子関係があり、0番以外のN−1個の組織には必ず1つの親組織があります。 子組織は複数になることがあります。 また、それぞれの組織は直接的または間接的にトップの組織と関係があるものとします。\n",
         "\n",
@@ -8011,7 +8155,7 @@
         "ABC002 D - 派閥"
       ],
       "metadata": {
-        "id": "Jo8sitvhY6r9"
+        "id": "smrmWPr5BKyJ"
       },
       "execution_count": null,
       "outputs": []
