Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNjMw5zS330oE4ZUJCH30T0",
+      "authorship_tag": "ABX9TyMIp3qn9SamLkn3wK2imzGW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7567,15 +7567,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "tSlW3WM5jCuR"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 再帰関数の実装例\n",
@@ -7802,11 +7793,11 @@
         "!g++ temp.cpp -o temp; ./temp "
       ],
       "metadata": {
-        "id": "EkRYz3I9BRFX",
-        "outputId": "b54fd177-c8b1-41c1-d620-b8bda10c27de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EkRYz3I9BRFX",
+        "outputId": "b54fd177-c8b1-41c1-d620-b8bda10c27de"
       },
       "execution_count": 5,
       "outputs": [
@@ -7827,81 +7818,29 @@
       "cell_type": "code",
       "source": [
         "# 再帰関数の例題\n",
+        "# APG4b 2.05.再帰関数 例題 from APG4b\n",
         "# 報告書の伝達時間\n",
         "# あなたはA社を経営する社長です。 A社はN個の組織からなり、\n",
-        "それぞれに0番からN−1番の番号が付いています。 0番の番号が付いた組織はトップの組織です。\n",
-        "\n",
-        "組織間には親子関係があり、0番以外のN−1個の組織には必ず1つの親組織があります。 子組織は複数になることがあります。 また、それぞれの組織は直接的または間接的にトップの組織と関係があるものとします。\n",
-        "\n",
-        "あなたは全ての組織に報告書を提出するように求めました。\n",
-        "混雑を避けるために、「各組織は子組織の報告書がそろったら、自身の報告書を加えて親組織に送る」ことを繰り返します。 子組織が無いような組織は自身の報告書だけをすぐに親組織に送ります。\n",
-        "\n",
-        "ある組織から報告書を送ってから、その親組織が受け取るときにかかる時間を1分とします。\n",
-        "あるタイミングで一斉に報告書の伝達を開始したときに、トップの組織の元に全ての組織の報告書が揃う時刻（伝達を始めてから何分後か）を求めてください。 なお、各組織の報告書は既に準備されているため、報告書の伝達以外の時間はかからないこととします。\n",
-        "\n",
-        "制約\n",
-        "1≤N≤50\n",
-        "0≤p \n",
-        "i\n",
-        "​\n",
-        " <i(1≤i≤N−1)\n",
-        "入力 \n",
-        "Copy\n",
-        "N\n",
-        "p \n",
-        "1\n",
-        "​\n",
-        "  p \n",
-        "2\n",
-        "​\n",
-        "  … p \n",
-        "N−1\n",
-        "​\n",
-        " \n",
-        "p \n",
-        "i\n",
-        "​\n",
-        " はi番の組織の親組織がp \n",
-        "i\n",
-        "​\n",
-        " 番の組織であることを示します。 0番の組織はトップの組織であり、親組織が存在しないことに注意してください。\n",
-        "\n",
-        "出力 \n",
-        "Copy\n",
-        "T\n",
-        "一斉に報告書の伝達を開始したときに、トップの組織の元に全ての組織の報告書が揃う時刻T（開始からT分後）を1行に出力してください。\n",
-        "\n",
-        "入力例1\n",
-        "6\n",
-        "0 0 1 1 4\n",
-        "実行結果\n",
-        "3\n",
-        "この入力例では、組織は次のような関係になっています。\n",
-        "\n",
-        "1番の組織の親組織は0番\n",
-        "2番の組織の親組織は0番\n",
-        "3番の組織の親組織は1番\n",
-        "4番の組織の親組織は1番\n",
-        "5番の組織の親組織は4番\n",
-        "この関係は次のような図になります。（子組織から親組織の向きに矢印が向いています。）\n",
-        "\n",
-        "\n",
-        "\n",
-        "次の図は、子組織からの報告書が揃った時刻（集まった報告書を親組織へ送った時刻）を青い文字で、各子組織から受け取った時刻を赤い文字で書き込んだものです。\n",
-        "\n",
-        "\n",
-        "\n",
-        "この図から分かるように、トップの組織の元に全ての組織の報告書が揃う時刻は3となります。\n",
-        "\n",
-        "この問題における組織のような構造を木構造といいます。 木構造に関する処理を行う際には再帰関数が有用なことが多いです。\n",
-        "\n",
-        "サンプルプログラム\n",
-        "下記のサンプルプログラムを書き換え、次のスライドのような動作をするようにプログラムを完成させてください。\n",
-        "スライドは入力例1のイメージを示したものです。\n",
-        "\n",
-        "\n",
-        "APG4b 2.05.再帰関数 例題 from APG4b\n",
-        "Copy\n",
+        "# それぞれに0番からN−1番の番号が付いています。 0番の番号が付いた組織はトップの組織です。\n",
+        "# 組織間には親子関係があり、0番以外のN−1個の組織には必ず1つの親組織があります。 \n",
+        "# 子組織は複数になることがあります。 また、それぞれの組織は直接的または間接的にト\n",
+        "# ップの組織と関係があるものとします。\n",
+        "# あなたは全ての組織に報告書を提出するように求めました。\n",
+        "# 混雑を避けるために、\n",
+        "# 「各組織は子組織の報告書がそろったら、自身の報告書を加えて親組織に送る」\n",
+        "# ことを繰り返します。 子組織が無いような組織は自身の報告書だけをすぐに親組織に送ります。\n",
+        "# ある組織から報告書を送ってから、その親組織が受け取るときにかかる時間を1分とします。\n",
+        "# あるタイミングで一斉に報告書の伝達を開始したときに、\n",
+        "# トップの組織の元に全ての組織の報告書が揃う時刻（伝達を始めてから何分後か）\n",
+        "# を求めてください。 \n",
+        "# 入力例 6 0 0 1 1 4 #=> 3\n",
+        "# この入力例では、組織は次のような関係になっています。\n",
+        "# 1番の組織の親組織は0番\n",
+        "# 2番の組織の親組織は0番\n",
+        "# 3番の組織の親組織は1番\n",
+        "# 4番の組織の親組織は1番\n",
+        "# 5番の組織の親組織は4番\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -7909,6 +7848,23 @@
         "// childrenは組織の関係を表す2次元配列(参照渡し)\n",
         "int complete_time(vector<vector<int>> &children, int x) {\n",
         "  // (ここに追記して再帰関数を実装する)\n",
+        "  // ベースケース\n",
+        "  if (children.at(x).size() == 0) {\n",
+        "    return 0;  // 子組織が無いような組織について、報告書が揃う時刻は0\n",
+        "  }\n",
+        " \n",
+        "  // 再帰ステップ\n",
+        "  int max_receive_time = 0;  // 受け取った時刻の最大値\n",
+        "  // x番の組織の子組織についてループ\n",
+        "  for (int c : children.at(x)) {\n",
+        " \n",
+        "    // (子組織 c のもとに揃った時刻 + 1) の時刻に c からの報告書を受け取る\n",
+        "    int receive_time = complete_time(children, c) + 1;\n",
+        " \n",
+        "    // 受け取った時刻の最大値 = 揃った時刻 なので最大値を求める\n",
+        "    max_receive_time = max(max_receive_time, receive_time);\n",
+        "  }\n",
+        "  return max_receive_time;\n",
         "}\n",
         " \n",
         "// これ以降の行は変更しなくてよい\n",
@@ -7932,125 +7888,117 @@
         " \n",
         "  // 0番の組織の元に報告書が揃う時刻を求める\n",
         "  cout << complete_time(children, 0) << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "// x番の組織について、子組織からの報告書が揃った時刻を返す\n",
-        "// childrenは組織の関係を表す2次元配列(参照渡し)\n",
-        "int complete_time(vector<vector<int>> &children, int x) {\n",
-        "  // (ここに追記して再帰関数を実装する)\n",
-        "}\n",
-        "\n",
-        "// これ以降の行は変更しなくてよい\n",
-        "\n",
-        "int main() {\n",
-        "  int N;\n",
-        "  cin >> N;\n",
-        "\n",
-        "  vector<int> p(N);  // 各組織の親組織を示す配列\n",
-        "  p.at(0) = -1;  // 0番組織の親組織は存在しないので-1を入れておく\n",
-        "  for (int i = 1; i < N; i++) {\n",
-        "    cin >> p.at(i);\n",
-        "  }\n",
-        "\n",
-        "  // 組織の関係から2次元配列を作る(理解しなくてもよい)\n",
-        "  vector<vector<int>> children(N);  // ある組織の子組織の番号一覧  // N×0の二次元配列\n",
-        "  for (int i = 1; i < N; i++) {\n",
-        "    int parent = p.at(i);  // i番の親組織の番号\n",
-        "    children.at(parent).push_back(i);  // parentの子組織一覧にi番を追加\n",
-        "  }\n",
-        "\n",
-        "  // 0番の組織の元に報告書が揃う時刻を求める\n",
-        "  cout << complete_time(children, 0) << endl;\n",
-        "}\n",
-        "push_backは配列に要素を追加する操作です。これについては「1.13.配列」で扱っています。\n",
-        "\n",
-        "関数complete_timeの引数childrenは二次元配列で、 x番の組織の子組織の番号一覧の配列はchildren.at(x)とすることで得ることができます。\n",
-        "\n",
-        "入力例1の場合のchildrenの中身は以下の表のようになります。\n",
-        "\n",
-        "x\tchildren.at(x)\n",
-        "0\t{1, 2}\n",
-        "1\t{3, 4}\n",
-        "2\t{}\n",
-        "3\t{}\n",
-        "4\t{5}\n",
-        "5\t{}\n",
-        "次のようにすることでx番の組織の子組織についての処理が行えます。\n",
-        "\n",
-        "Copy\n",
-        "for (int c : children.at(x)) {\n",
-        "  // (cについての処理)\n",
-        "}for (int c : children.at(x)) {\n",
-        "  // (cについての処理)\n",
-        "}\n",
-        "ヒント\n",
-        "クリックでヒントを開く\n",
-        "解答例\n",
-        "自分で考えてみたあと、必ず確認してください。\n",
-        "\n",
-        "クリックで解答例を開く\n",
-        "注意点\n",
-        "スタックオーバーフロー\n",
-        "再帰呼び出しは複雑な処理を簡潔に書くことできる便利な機能ですが、 「再帰呼出しの連鎖があまりにも多く続くと実行時エラーが起こる」 という点に注意しなければなりません。\n",
-        "\n",
-        "例えば、再帰関数の実装を間違えて、無限に再帰呼出しが起こってしまうようなケースでは実行時エラーが起こります。 また、再帰関数が正しく実装できていたとしても、数千万回ほどの大量の再帰呼出しを行うようなプログラムでは 実行時エラーが発生することがあります。\n",
-        "\n",
-        "次のプログラムは、ベースケースを実装していないため正しく動作しない例です。\n",
-        "\n",
-        "Copy\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "smrmWPr5BKyJ",
+        "outputId": "5424fa64-d8f6-451c-951b-1cc7696f0452"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 6 0 0 1 1 4 |./temp "
+      ],
+      "metadata": {
+        "id": "jgYQjqyayaMx",
+        "outputId": "b5398202-1acd-4f27-a971-c5e7d50a6249",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 例題\n",
+        "%%writefile temp.cpp\n",
+        "// 0からnまでの総和を計算し、途中結果を出力する\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
         "// 0からnまでの総和を計算し、途中結果を出力する\n",
         "int sum(int n) {\n",
-        "  // ベースケースが実装されていないので止まらない！\n",
-        " \n",
+        "  // ベースケースが実装されていないので止まらない！ => 直す\n",
+        "  if (n == 0) return 0;\n",
         "  // 再帰ステップ\n",
         "  int result = sum(n - 1) + n;\n",
         "  cout << \"sum(\" << n << \") = \" << result << endl;  // 途中結果を出力する\n",
         "  return result;\n",
         "}\n",
-        " \n",
         "int main() {\n",
         "  // 無限に再帰呼び出しが起こる\n",
-        "  cout << sum(100) << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "// 0からnまでの総和を計算し、途中結果を出力する\n",
-        "int sum(int n) {\n",
-        "  // ベースケースが実装されていないので止まらない！\n",
-        "\n",
-        "  // 再帰ステップ\n",
-        "  int result = sum(n - 1) + n;\n",
-        "  cout << \"sum(\" << n << \") = \" << result << endl;  // 途中結果を出力する\n",
-        "  return result;\n",
-        "}\n",
-        "\n",
-        "int main() {\n",
-        "  // 無限に再帰呼び出しが起こる\n",
-        "  cout << sum(100) << endl;\n",
-        "}\n",
-        "実行結果の例\n",
-        "終了コード\t139\n",
-        "実行時間\t218 ms\n",
-        "メモリ\t263296 KB\n",
-        "終了コードの139はプログラムが正しく終了しなかったことを意味しています。\n",
-        "\n",
-        "高度な話になりますが、関数呼び出しを行うときにメモリを消費します。 プログラムを実行しているコンピュータのメモリには限りがあるので、再帰呼び出しが多すぎるとメモリが足りなくなってしまいます。 メモリが足りなくなるとそれ以上プログラムを実行できなくなり、実行時エラーが起こります。 この現象をスタックオーバーフローといいます。 コードテストで実行したときに終了コードが139となった場合は、スタックオーバーフローを疑いましょう。\n",
-        "\n",
-        "再帰関数を実装するときは、再帰呼び出しをしすぎると実行時エラーが起こる可能性があることを頭の片隅に置いておくようにしましょう。 スタックオーバーフローを避けるために、ループ構文で繰り返し処理を書き直す必要がある場合もあります。\n",
-        "\n",
-        "細かい話\n",
-        "相互再帰\n",
-        "2つ以上の関数が相互に呼び出しあって再帰の形になっているものを相互再帰といいます。\n",
-        "\n",
-        "次のプログラムを見てください。\n",
-        "\n",
-        "Copy\n",
+        "  cout << sum(15) << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "9T5A3m0XyWlQ",
+        "outputId": "049596eb-5bb8-46de-b9b7-b4db12a8f730",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp "
+      ],
+      "metadata": {
+        "id": "dKaC71EE2M19"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "tSlW3WM5jCuR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 相互再帰\n",
+        "# 相互再帰では、「その関数の後ろで定義される別の関数」を呼び出すことになるので、\n",
+        "# プロトタイプ宣言が必須です。 \n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -8081,51 +8029,60 @@
         "  cout << is_even(4) << endl;  // 1\n",
         "  cout << is_odd(5) << endl;   // 1\n",
         "  cout << is_even(3) << endl;  // 0\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "oy5DXOew2AMd",
+        "outputId": "71d6ef44-eb0d-43de-e981-4755fc516ec9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp "
+      ],
+      "metadata": {
+        "id": "oAaCSFoE23Vv",
+        "outputId": "ecc33835-73a3-48b7-fa4a-7e1357dfa267",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 再帰関数\n",
+        "# 発展的な例\n",
+        "# 途中で出力する例\n",
         "\n",
-        "// プロトタイプ宣言 (1.15.関数「細かい話」を参照)\n",
-        "bool is_even(int);\n",
-        "bool is_odd(int);\n",
         "\n",
-        "// nが偶数かを判定する\n",
-        "bool is_even(int n) {\n",
-        "  // ベースケース\n",
-        "  if (n == 0) {\n",
-        "    return true;\n",
-        "  }\n",
-        "  // 再帰ステップ\n",
-        "  return is_odd(n - 1);  // n-1 が奇数なら、nは偶数\n",
-        "}\n",
-        "// nが奇数かを判定する\n",
-        "bool is_odd(int n) {\n",
-        "  // ベースケース\n",
-        "  if (n == 0) {\n",
-        "    return false;\n",
-        "  }\n",
-        "  // 再帰ステップ\n",
-        "  return is_even(n - 1);  // n-1 が偶数なら、nは奇数\n",
-        "}\n",
         "\n",
-        "int main() {\n",
-        "  cout << is_even(4) << endl;  // 1\n",
-        "  cout << is_odd(5) << endl;   // 1\n",
-        "  cout << is_even(3) << endl;  // 0\n",
-        "}\n",
-        "実行結果\n",
-        "1\n",
-        "1\n",
-        "0\n",
-        "まず、is_evenを見てください。再帰ステップでis_oddを呼び出しています。 一方is_oddの再帰ステップではis_evenを呼び出しています。\n",
-        "\n",
-        "相互再帰では、「その関数の後ろで定義される別の関数」を呼び出すことになるので、プロトタイプ宣言が必須です。 プロトタイプ宣言については、1.15.関数の「細かい話」を参照してください。\n",
-        "\n",
-        "上のプログラムの場合はis_evenを先に定義しているので、is_oddのプロトタイプ宣言があれば十分ですが、分かりやすさのために両方のプロトタイプ宣言を書いています。\n",
-        "\n",
-        "相互再帰はプログラムの動作が複雑になりますが、 通常の再帰関数と同様に「再帰呼出しの連鎖に終わりがある」という条件を満たしていれば動作します。\n",
-        "\n",
-        "発展的な例\n",
         "途中で出力する例\n",
         "クリックで開く\n",
         "引数の配列を変化させる例\n",
@@ -8135,7 +8092,8 @@
         "\n",
         "EX20.報告書の枚数\n",
         "ABC/ARCの問題\n",
-        "ここまでの知識で解ける問題をAtCoder Beginner Contest / AtCoder Regular Contestの過去問題から紹介します。 練習問題だけでは物足りない人は是非挑戦してみてください。\n",
+        "ここまでの知識で解ける問題をAtCoder Beginner Contest / AtCoder Regular Contestの過去問題から紹介します。 \n",
+        "練習問題だけでは物足りない人は是非挑戦してみてください。\n",
         "\n",
         "ヒントと解答例を用意しました。参考にしてください。\n",
         "\n",
@@ -8155,7 +8113,7 @@
         "ABC002 D - 派閥"
       ],
       "metadata": {
-        "id": "smrmWPr5BKyJ"
+        "id": "SKj9GAqo217t"
       },
       "execution_count": null,
       "outputs": []
